Wed Oct 29 12:15:35 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/IIOP_Transport.cpp: Cosmetic fix.
	
	* tao/Strategies/SCIOP_Endpoint.cpp:
	* tao/Strategies/SCIOP_Endpoint.h:
	* tao/Strategies/SCIOP_Factory.h:
	* tao/Strategies/SCIOP_Transport.cpp: 
          
	  Fixes for the compilation errors in lksctp build. Since I have o
	  clue on what the problem could be, this is just a guess. 

Wed Oct 29 12:09:09 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/DynamicInterface/DynamicInterface.mpc:
        * tao/PortableServer/PortableServer.mpc:

          Added list of source files, since the CVS respository
          contains source files which are not to be built but not
          yet removed.

Wed Oct 29 11:28:36 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Valuetype/AbstractBase_Invocation_Adapter.cpp:
        * tao/Valuetype/AbstractBase_Invocation_Adapter.h:

          Added 'const' qualifier to operation name parameter in the
          constructor, to correlate with the signature of the base
          class constructor.

Wed Oct 29 11:14:33 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Portable_Interceptors/PICurrent/ClientRequestInterceptor.cpp:
	* tests/Portable_Interceptors/PICurrent/ClientRequestInterceptor2.cpp:
	* tests/Portable_Interceptors/PICurrent/ServerRequestInterceptor.cpp:

	  #include OS.h in the above files to get them compiling in single
	  threaded builds.

Wed Oct 29 11:00:56 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/interface_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:

          Added generation of ACE_TEMPLATE_SPECIALIZATION macro 
          to implementataion of Objref_Traits<> and Value_Traits<> 
          specializations.

Wed Oct 29 10:50:36 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/RTCORBA/RT_Transport_Descriptor.cpp: Added a missing
	  include. 
