@@ -65,7 +65,6 @@ be_visitor_interface_cs::visit_interface (be_interface *node)
           << "// Traits specializations for " << node->name () << ".";
 
       *os << be_nl << be_nl
-          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << node->name () << "_ptr" << be_nl
           << "TAO::Objref_Traits<" << node->name () << ">::tao_duplicate ("
           << be_idt << be_idt_nl
@@ -76,7 +75,6 @@ be_visitor_interface_cs::visit_interface (be_interface *node)
           << "}";
 
       *os << be_nl << be_nl
-          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << "void" << be_nl
           << "TAO::Objref_Traits<" << node->name () << ">::tao_release ("
           << be_idt << be_idt_nl
@@ -87,7 +85,6 @@ be_visitor_interface_cs::visit_interface (be_interface *node)
           << "}";
 
       *os << be_nl << be_nl
-          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << node->name () << "_ptr" << be_nl
           << "TAO::Objref_Traits<" << node->name () << ">::tao_nil (void)"
           << be_nl
@@ -96,7 +93,6 @@ be_visitor_interface_cs::visit_interface (be_interface *node)
           << "}";
 
       *os << be_nl << be_nl
-          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << "CORBA::Boolean" << be_nl
           << "TAO::Objref_Traits<" << node->name () << ">::tao_marshal ("
           << be_idt << be_idt_nl
