@@ -68,7 +68,6 @@ be_visitor_valuetype_cs::visit_valuetype (be_valuetype *node)
   if (node->is_defined ())
     {
       *os << be_nl << be_nl
-          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << "void" << be_nl
           << "TAO::Value_Traits<" << node->name  () << ">::tao_add_ref (" 
           << be_idt << be_idt_nl
@@ -79,7 +78,6 @@ be_visitor_valuetype_cs::visit_valuetype (be_valuetype *node)
           << "}";
 
       *os << be_nl << be_nl
-          << "ACE_TEMPLATE_SPECIALIZATION" << be_nl
           << "void" << be_nl
           << "TAO::Value_Traits<" << node->name () << ">::tao_remove_ref ("
           << be_idt << be_idt_nl
